log
do., 10 de abr. de 2022 10:37:04: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
658e514
do., 10 de abr. de 2022 11:05:16: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:44:10: error: unused variable 'posicion' [-Werror=unused-variable]
     long posicion = hash(key , map->capacity);
          ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9e4d471
do., 10 de abr. de 2022 11:05:37: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d7c9b9a
do., 10 de abr. de 2022 11:18:43: 
 hashmap.c | 22 ++++++++++++++++++++--
 1 file changed, 20 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
d91253c
do., 10 de abr. de 2022 11:31:18: 
 hashmap.c | 44 +++++++++++++++++++++++++++++++++-----------
 1 file changed, 33 insertions(+), 11 deletions(-)
 tests:  6|4
total_score: 30/70
d76c4e1
do., 10 de abr. de 2022 11:34:19: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:102:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
             map->current = key;
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
69148af
do., 10 de abr. de 2022 11:35:46: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
hashmap.c: In function 'searchMap':
hashmap.c:102:26: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
             map->current = map->buckets[index]->value;
                          ^
cc1.exe: all warnings being treated as errors
Compilation failed
47e1ae6
